# nice_animation

./: .gitignore  Makefile  README.md  pyproject.toml
script/: attention.py  detailed_attention.py  irregular_unaligned_concept.py  mae_animation.py  matrices_scene.py  view_generation.py
src/nice_animations/my_objects/: attention_utils.py  matrices.py  model.py
