[project]
authors = [{name = "iris.dumeur6@etu.univ-lorraine.fr", email = "iris.dumeur6@etu.univ-lorraine.fr"}]
dependencies = ["manim"]
description = "Add a short description here"
name = "nice_animations"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
nice_animations = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
black = ">=24.10.0,<25"
manim = ">=0.18.1,<0.19"

